changed horizontal scroll issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,14 +7,14 @@ html {
 .lowerBody {
 	position: absolute;
 	background: #dddddd;
-	width: 100%;
+	width: auto;
 }
 
 header {
 	height: 80px;
 	background: white;
 	margin: auto;
-	width: 100%;
+	width: auto;
 	padding: 20px;
 	border-bottom: 10px solid #ddd;
 }
@@ -29,6 +29,8 @@ header {
 	font-size: 24px;
 	margin-bottom: 25px;
 	display: inline-block;
+	border-bottom: 2px solid #ddd;
+
 
 }
 
@@ -76,7 +78,7 @@ nav {
 }
 
 .boxWidth {
-	width: 100%;
+	width: auto;
 }
 
 .submit {
@@ -113,4 +115,3 @@ h1 h2 h3 h4 h5 h6 {
 	font-family: "Times";
 }
 
-	border-bottom: 2px solid #ddd;
